<resources>
    <string name="app_name">Health_App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Категории</string>
    <string name="info">Информация</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="age">Возраст</string>
    <string name="mass_index">Индекс массы тела</string>
    <string name="deficite">Дефицит</string>
    <string name="normal">Норма</string>
    <string name="overweight">Избыточная МТ</string>
    <string name="obesity_1_dg">Ожирение 1 степени</string>
    <string name="obesity_2_dg">Ожирение 2 степени</string>
    <string name="obesity_3_dg">Ожирение 3 степени</string>
    <string name="mass_index_text">Индекс массы тела — величина, позволяющая оценить степень соответствия массы человека и его роста и тем самым косвенно судить о том, является ли масса недостаточной, нормальной или избыточной. Важен при определении показаний для необходимости лечения.</string>
    <string name="save">Сохранить</string>
    <string name="medicine">Препараты</string>
    <string name="medicine_name">Название препарата</string>
    <string name="add">Добавить</string>
    <string name="appointment_creation">Создание записи</string>
    <string name="log_in">Вход</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="welcome">Здраствуйте!</string>
    <string name="change">Изменить</string>
    <string name="Changing">Изменение</string>
    <string name="every_day">Каждый день</string>
    <string name="once_every_two_days">Раз в два дня</string>
    <string name="once_every_week">Раз в неделю</string>
    <string name="three_times_in_a_day">Три раза в день</string>
    <string name="twice_a_day">Два раза в день</string>
    <string name="delete_medicine_from_the_list_question">Удалить препарат из списка?</string>
    <string name="deleting">Удаление</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="name">Имя</string>
    <string name="doctor">Врач</string>
    <string name="successfully_registred">Регистрация успешна</string>
    <string name="enter_missing_info">Введите недостающую информацию</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="wrong_login_or_password">Неправильный логин или пароль</string>
    <string name="changed">Изменено</string>
    <string name="wrong_birth_date">Неправильно введена дата рождения</string>
    <string name="diseases">Заболевания</string>
    <string name="appointment">Записи</string>
    <string name="patients">Пациенты</string>
    <string name="post">Должность</string>
    <string name="pick_post">Выбрать должность</string>
    <string name="select_birth_date">Укажите дату рождения</string>
    <string name="choose_appointment_time">Выберите время записи</string>
    <string name="successfully_created">Запись создана!</string>
    <string name="error_try_again">Ошибка! Попробуйте еще раз</string>
    <string name="choose_time">Выбор времени</string>
    <string name="description">Описание</string>
    <string name="adding">Добавление</string>
    <string name="diseases_name">Заболевание</string>
    <string name="delete_info">Удалить информацию?</string>
</resources>