<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".LogInFragment">


    <EditText
        android:id="@+id/log_in_et"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:textSize="@dimen/large_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="@dimen/large_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_et" />

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_pink"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="@dimen/small_text_size"
        android:text="@string/log_in"
        style="@style/Widget.Material3.Button"
        app:layout_constraintEnd_toEndOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_pink"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/small_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="@dimen/small_text_size"
        android:text="@string/registration"
        style="@style/Widget.Material3.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="@dimen/heading_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/log_in_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>