<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".RegistrationFragment">

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"



        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:textSize="@dimen/large_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/birthDay_picker"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:textSize="@dimen/large_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="День рождения"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_et" />
    <EditText
        android:id="@+id/log_in_et"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:textSize="@dimen/large_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/login"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthDay_picker" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="@dimen/large_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_et" />

    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_pink"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/small_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="@dimen/small_text_size"
        android:text="@string/registration"
        style="@style/Widget.Material3.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="@dimen/heading_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/log_in_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/doctor"
        android:textSize="@dimen/small_text_size"
        android:fontFamily="@font/montserrat_medium"
        android:buttonTint="@color/pink"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/password_et"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

</androidx.constraintlayout.widget.ConstraintLayout>