<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_list"
    tools:context=".loggining.PatientsRegistrationFragment">

    <EditText
    android:id="@+id/weight_EditText"
    android:layout_width="match_parent"



    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="200dp"
    android:textSize="@dimen/large_text_size"
    android:fontFamily="@font/montserrat_semibold"
    android:hint="@string/weight"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/height_EditText"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="200dp"
        android:textSize="@dimen/large_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/height"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_EditText" />


    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_pink"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/small_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="@dimen/small_text_size"
        android:text="@string/registration"
        style="@style/Widget.Material3.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="@dimen/heading_text_size"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/weight_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>