<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".info.InfoFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/heading_top_margin"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_text_size"
        app:layout_constraintStart_toStartOf="@+id/info_card"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/info_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/extra_large_top_margin"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:singleLine="true"

                android:fontFamily="@font/montserrat_semibold"
                android:textSize="@dimen/large_text_size"
                android:textColor="@color/black"
                android:text="Имя"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/heading_level2_top_margin"
                android:layout_marginStart="@dimen/heading_level2_start_margin"
                />
            <ImageView
                android:id="@+id/edit_info_btn"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:singleLine="true"

                android:fontFamily="@font/montserrat_semibold"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:background="@drawable/edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_top_margin"

                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"

                android:text="@string/height"
                app:layout_constraintStart_toStartOf="@+id/nameTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <TextView
                android:id="@+id/height_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"

                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"

                android:text="value"
                app:layout_constraintStart_toEndOf="@+id/height_title"
                app:layout_constraintTop_toTopOf="@+id/height_title" />

            <TextView
                android:id="@+id/weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_top_margin"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                android:text="@string/weight"
                app:layout_constraintStart_toStartOf="@+id/height_title"
                app:layout_constraintTop_toBottomOf="@+id/height_title" />

            <TextView
                android:id="@+id/weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                android:text="value"
                app:layout_constraintStart_toStartOf="@+id/height_value"
                app:layout_constraintTop_toTopOf="@+id/weight_title" />

            <TextView
                android:id="@+id/age_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_top_margin"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="@+id/weight_title"
                app:layout_constraintTop_toBottomOf="@+id/weight_title" />

            <TextView
                android:id="@+id/age_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                android:text="value"
                app:layout_constraintStart_toStartOf="@+id/weight_value"
                app:layout_constraintTop_toTopOf="@+id/age_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/mass_index_card"
        android:layout_width="360dp"
        android:layout_height="360dp"
        app:layout_constraintTop_toBottomOf="@id/info_card"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:showIn="@layout/fragment_info">

            <TextView
                android:id="@+id/mass_index_title"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/heading_level2_start_margin"

                android:layout_marginTop="@dimen/heading_level2_top_margin"
                android:fontFamily="@font/montserrat_semibold"
                android:singleLine="true"
                android:text="@string/mass_index"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/help_btn"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/help" />

            <TextView
                android:id="@+id/mass_index_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_top_margin"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:text=""
                app:layout_constraintStart_toStartOf="@+id/mass_index_title"
                app:layout_constraintTop_toBottomOf="@+id/mass_index_title" />

            <TextView
                android:id="@+id/mass_index_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:text=""
                app:layout_constraintEnd_toEndOf="@+id/help_btn"
                app:layout_constraintTop_toTopOf="@+id/mass_index_value" />

            <TextView
                android:id="@+id/deficit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_top_margin"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/deficite"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="@+id/mass_index_value"
                app:layout_constraintTop_toBottomOf="@+id/mass_index_value" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="300dp"
                android:layout_height="2dp"

                app:layout_constraintStart_toStartOf="@+id/deficit_title"
                app:layout_constraintTop_toBottomOf="@id/deficit_title" />

            <TextView
                android:id="@+id/normal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_top_margin"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/normal"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="@+id/mass_index_value"
                app:layout_constraintTop_toBottomOf="@+id/deficit_title" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="300dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="@+id/deficit_title"
                app:layout_constraintTop_toBottomOf="@id/normal_title" />

            <TextView
                android:id="@+id/overweight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_top_margin"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/overweight"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="@+id/mass_index_value"
                app:layout_constraintTop_toBottomOf="@+id/normal_title" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="300dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="@+id/deficit_title"
                app:layout_constraintTop_toBottomOf="@id/overweight_title" />
            <TextView
                android:id="@+id/obesity_1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_top_margin"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/obesity_1_dg"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="@+id/mass_index_value"
                app:layout_constraintTop_toBottomOf="@+id/overweight_title" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="300dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="@+id/deficit_title"
                app:layout_constraintTop_toBottomOf="@id/obesity_1_title" />
            <TextView
                android:id="@+id/obesity_2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_top_margin"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/obesity_2_dg"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="@+id/mass_index_value"
                app:layout_constraintTop_toBottomOf="@+id/obesity_1_title" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="300dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="@+id/deficit_title"
                app:layout_constraintTop_toBottomOf="@id/obesity_2_title" />
            <TextView
                android:id="@+id/obesity_3_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_top_margin"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/obesity_3_dg"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="@+id/mass_index_value"
                app:layout_constraintTop_toBottomOf="@+id/obesity_2_title" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="300dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="@+id/deficit_title"
                app:layout_constraintTop_toBottomOf="@id/obesity_3_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/log_out_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/mass_index_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/exit"/>

</androidx.constraintlayout.widget.ConstraintLayout>